Fixed course banner being hidden when zoomed in, or on smaller resolutions

--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -350,10 +350,6 @@ input {
   transform: translate(-50%, 0);
 }
 
-.banner {
-  margin-left: -350px;
-}
-
 .width-resize {
   min-width: 150px;
 }
